[package]
name = "gettext"
version = "0.1.0"
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
description = "An implementation of Gettext translation framework for Rust"
documenation = "https://justinas.github.io/gettext/gettext/"
license = "MIT"
repository = "justinas/gettext"
readme = "README.md"

[dependencies]
byteorder = "0.4"
