[package]
name = "gettext"
version = "0.3.0"
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
description = "An implementation of Gettext translation framework for Rust"
license = "MIT"
repository = "https://github.com/justinas/gettext"
readme = "README.md"

[dependencies]
byteorder = "0.4"
encoding = "0.2.32"
