[package]
name = "gettext"
version = "0.4.0"
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
description = "An implementation of Gettext translation framework for Rust"
license = "MIT"
repository = "https://github.com/justinas/gettext"
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1.3"
encoding = "0.2.32"
